.antlr/TParser.java
// Generated from /home/abhi/test_antlr/TParser.g4 by ANTLR 4.9.2
import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.misc.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;
import java.util.Iterator;
import java.util.ArrayList;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast"})
public class TParser extends Parser {
	static { RuntimeMetaData.checkVersion("4.9.2", RuntimeMetaData.VERSION); }

	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		COMMENT=1, And=2, Not=3, Or=4, To=5, By=6, Int=7, Bool=8, Char=9, Return=10, 
		Break=11, If=12, Then=13, Else=14, For=15, While=16, Do=17, True=18, False=19, 
		Static=20, ID=21, NUMCONST=22, CHARCONST=23, STRINGCONST=24, LetDig=25, 
		Letter=26, Digit=27, Comma=28, SemiColon=29, LessorEqual=30, GreatorEqual=31, 
		LessThan=32, GreaterThan=33, DoubleEqual=34, NotEqual=35, Increment=36, 
		Decrement=37, PlusEqual=38, MinusEqual=39, StarEqual=40, ForEqual=41, 
		Equal=42, Colon=43, Plus=44, Minus=45, Star=46, ForSlash=47, Percent=48, 
		OpenPar=49, ClosePar=50, OpenCurly=51, CloseCurly=52, OpenSqu=53, CloseSqu=54, 
		QuestionMark=55, WhiteSpace=56;
	public static final int
		RULE_main = 0, RULE_declList = 1, RULE_decl = 2, RULE_varDecl = 3, RULE_scopedVarDecl = 4, 
		RULE_varDeclList = 5, RULE_varDeclInit = 6, RULE_varDeclId = 7, RULE_typeSpec = 8, 
		RULE_funDecl = 9, RULE_parms = 10, RULE_parmList = 11, RULE_parmTypeList = 12, 
		RULE_parmIdList = 13, RULE_parmId = 14, RULE_stmt = 15, RULE_expStmt = 16, 
		RULE_compoundStmt = 17, RULE_localDecls = 18, RULE_stmtList = 19, RULE_selectStmt = 20, 
		RULE_iterStmt = 21, RULE_iterRange = 22, RULE_returnStmt = 23, RULE_breakStmt = 24, 
		RULE_exp = 25, RULE_simpleExp = 26, RULE_andExp = 27, RULE_unaryRelExp = 28, 
		RULE_relExp = 29, RULE_relop = 30, RULE_sumExp = 31, RULE_sumop = 32, 
		RULE_mulExp = 33, RULE_mulop = 34, RULE_unaryExp = 35, RULE_unaryop = 36, 
		RULE_factor = 37, RULE_mutable = 38, RULE_immutable = 39, RULE_call = 40, 
		RULE_args = 41, RULE_argList = 42, RULE_constant = 43;
	private static String[] makeRuleNames() {
		return new String[] {
			"main", "declList", "decl", "varDecl", "scopedVarDecl", "varDeclList", 
			"varDeclInit", "varDeclId", "typeSpec", "funDecl", "parms", "parmList", 
			"parmTypeList", "parmIdList", "parmId", "stmt", "expStmt", "compoundStmt", 
			"localDecls", "stmtList", "selectStmt", "iterStmt", "iterRange", "returnStmt", 
			"breakStmt", "exp", "simpleExp", "andExp", "unaryRelExp", "relExp", "relop", 
			"sumExp", "sumop", "mulExp", "mulop", "unaryExp", "unaryop", "factor", 
			"mutable", "immutable", "call", "args", "argList", "constant"
		};
	}
	public static final String[] ruleNames = makeRuleNames();

	private static String[] makeLiteralNames() {
		return new String[] {
			null, null, "'and'", "'not'", "'or'", "'to'", "'by'", "'int'", "'bool'", 
			"'char'", "'return'", "'break'", "'if'", "'then'", "'else'", "'for'", 
			"'while'", "'do'", "'true'", "'false'", "'static'", null, null, null, 
			null, null, null, null, "','", "';'", "'<='", "'>='", "'<'", "'>'", "'=='", 
			"'!='", "'++'", "'--'", "'+='", "'-='", "'*='", "'/='", "'='", "':'", 
			"'+'", "'-'", "'*'", "'/'", "'%'", "'('", "')'", "'{'", "'}'", "'['", 
			"']'", "'?'"
		};
	}
	private static final String[] _LITERAL_NAMES = makeLiteralNames();
	private static String[] makeSymbolicNames() {
		return new String[] {
			null, "COMMENT", "And", "Not", "Or", "To", "By", "Int", "Bool", "Char", 
			"Return", "Break", "If", "Then", "Else", "For", "While", "Do", "True", 
			"False", "Static", "ID", "NUMCONST", "CHARCONST", "STRINGCONST", "LetDig", 
			"Letter", "Digit", "Comma", "SemiColon", "LessorEqual", "GreatorEqual", 
			"LessThan", "GreaterThan", "DoubleEqual", "NotEqual", "Increment", "Decrement", 
			"PlusEqual", "MinusEqual", "StarEqual", "ForEqual", "Equal", "Colon", 
			"Plus", "Minus", "Star", "ForSlash", "Percent", "OpenPar", "ClosePar", 
			"OpenCurly", "CloseCurly", "OpenSqu", "CloseSqu", "QuestionMark", "WhiteSpace"
		};
	}
	private static final String[] _SYMBOLIC_NAMES = makeSymbolicNames();
	public static final Vocabulary VOCABULARY = new VocabularyImpl(_LITERAL_NAMES, _SYMBOLIC_NAMES);

	/**
	 * @deprecated Use {@link #VOCABULARY} instead.
	 */
	@Deprecated
	public static final String[] tokenNames;
	static {
		tokenNames = new String[_SYMBOLIC_NAMES.length];
		for (int i = 0; i < tokenNames.length; i++) {
			tokenNames[i] = VOCABULARY.getLiteralName(i);
			if (tokenNames[i] == null) {
				tokenNames[i] = VOCABULARY.getSymbolicName(i);
			}

			if (tokenNames[i] == null) {
				tokenNames[i] = "<INVALID>";
			}
		}
	}

	@Override
	@Deprecated
	public String[] getTokenNames() {
		return tokenNames;
	}

	@Override

	public Vocabulary getVocabulary() {
		return VOCABULARY;
	}

	@Override
	public String getGrammarFileName() { return "TParser.g4"; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public String getSerializedATN() { return _serializedATN; }

	@Override
	public ATN getATN() { return _ATN; }

	public TParser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}

	public static class MainContext extends ParserRuleContext {
		public DeclListContext declList() {
			return getRuleContext(DeclListContext.class,0);
		}
		public MainContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_main; }
	}

	public final MainContext main() throws RecognitionException {
		MainContext _localctx = new MainContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_main);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(88);
			declList(0);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class DeclListContext extends ParserRuleContext {
		public DeclContext decl() {
			return getRuleContext(DeclContext.class,0);
		}
		public DeclListContext declList() {
			return getRuleContext(DeclListContext.class,0);
		}
		public DeclListContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_declList; }
	}

	public final DeclListContext declList() throws RecognitionException {
		return declList(0);
	}

	private DeclListContext declList(int _p) throws RecognitionException {
		ParserRuleContext _parentctx = _ctx;
		int _parentState = getState();
		DeclListContext _localctx = new DeclListContext(_ctx, _parentState);
		DeclListContext _prevctx = _localctx;
		int _startState = 2;
		enterRecursionRule(_localctx, 2, RULE_declList, _p);
		try {
			int _alt;
			enterOuterAlt(_localctx, 1);
			{
			{
			setState(91);
			decl();
			}
			_ctx.stop = _input.LT(-1);
			setState(97);
			_errHandler.sync(this);
			_alt = getInterpreter().adaptivePredict(_input,0,_ctx);
			while ( _alt!=2 && _alt!=org.antlr.v4.runtime.atn.ATN.INVALID_ALT_NUMBER ) {
				if ( _alt==1 ) {
					if ( _parseListeners!=null ) triggerExitRuleEvent();
					_prevctx = _localctx;
					{
					{
					_localctx = new DeclListContext(_parentctx, _parentState);
					pushNewRecursionContext(_localctx, _startState, RULE_declList);
					setState(93);
					if (!(precpred(_ctx, 2))) throw new FailedPredicateException(this, "precpred(_ctx, 2)");
					setState(94);
					decl();
					}
					} 
				}
				setState(99);
				_errHandler.sync(this);
				_alt = getInterpreter().adaptivePredict(_input,0,_ctx);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			unrollRecursionContexts(_parentctx);
		}
		return _localctx;
	}

	public static class DeclContext extends ParserRuleContext {
		public VarDeclContext varDecl() {
			return getRuleContext(VarDeclContext.class,0);
		}
		public FunDeclContext funDecl() {
			return getRuleContext(FunDeclContext.class,0);
		}
		public DeclContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_decl; }
	}

	public final DeclContext decl() throws RecognitionException {
		DeclContext _localctx = new DeclContext(_ctx, getState());
		enterRule(_localctx, 4, RULE_decl);
		try {
			setState(102);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,1,_ctx) ) {
			case 1:
				enterOuterAlt(_localctx, 1);
				{
				setState(100);
				varDecl();
				}
				break;
			case 2:
				enterOuterAlt(_localctx, 2);
				{
				setState(101);
				funDecl();
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class VarDeclContext extends ParserRuleContext {
		public TypeSpecContext typeSpec() {
			return getRuleContext(TypeSpecContext.class,0);
		}
		public VarDeclListContext varDeclList() {
			return getRuleContext(VarDeclListContext.class,0);
		}
		public TerminalNode SemiColon() { return getToken(TParser.SemiColon, 0); }
		public VarDeclContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_varDecl; }
	}

	public final VarDeclContext varDecl() throws RecognitionException {
		VarDeclContext _localctx = new VarDeclContext(_ctx, getState());
		enterRule(_localctx, 6, RULE_varDecl);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(104);
			typeSpec();
			setState(105);
			varDeclList(0);
			setState(106);
			match(SemiColon);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ScopedVarDeclContext extends ParserRuleContext {
		public TerminalNode Static() { return getToken(TParser.Static, 0); }
		public TypeSpecContext typeSpec() {
			return getRuleContext(TypeSpecContext.class,0);
		}
		public VarDeclListContext varDeclList() {
			return getRuleContext(VarDeclListContext.class,0);
		}
		public TerminalNode SemiColon() { return getToken(TParser.SemiColon, 0); }
		public ScopedVarDeclContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_scopedVarDecl; }
	}

	public final ScopedVarDeclContext scopedVarDecl() throws RecognitionException {
		ScopedVarDeclContext _localctx = new ScopedVarDeclContext(_ctx, getState());
		enterRule(_localctx, 8, RULE_scopedVarDecl);
		try {
			setState(117);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case Static:
				enterOuterAlt(_localctx, 1);
				{
				setState(108);
				match(Static);
				setState(109);
				typeSpec();
				setState(110);
				varDeclList(0);
				setState(111);
				match(SemiColon);
				}
				break;
			case Int:
			case Bool:
			case Char:
				enterOuterAlt(_localctx, 2);
				{
				setState(113);
				typeSpec();
				setState(114);
				varDeclList(0);
				setState(115);
				match(SemiColon);
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class VarDeclListContext extends ParserRuleContext {
		public VarDeclInitContext varDeclInit() {
			return getRuleContext(VarDeclInitContext.class,0);
		}
		public VarDeclListContext varDeclList() {
			return getRuleContext(VarDeclListContext.class,0);
		}
		public TerminalNode Comma() { return getToken(TParser.Comma, 0); }
		public VarDeclListContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_varDeclList; }
	}

	public final VarDeclListContext varDeclList() throws RecognitionException {
		return varDeclList(0);
	}

	private VarDeclListContext varDeclList(int _p) throws RecognitionException {
		ParserRuleContext _parentctx = _ctx;
		int _parentState = getState();
		VarDeclListContext _localctx = new VarDeclListContext(_ctx, _parentState);
		VarDeclListContext _prevctx = _localctx;
		int _startState = 10;
		enterRecursionRule(_localctx, 10, RULE_varDeclList, _p);
		try {
			int _alt;
			enterOuterAlt(_localctx, 1);
			{
			{
			setState(120);
			varDeclInit();
			}
			_ctx.stop = _input.LT(-1);
			setState(127);
			_errHandler.sync(this);
			_alt = getInterpreter().adaptivePredict(_input,3,_ctx);
			while ( _alt!=2 && _alt!=org.antlr.v4.runtime.atn.ATN.INVALID_ALT_NUMBER ) {
				if ( _alt==1 ) {
					if ( _parseListeners!=null ) triggerExitRuleEvent();
					_prevctx = _localctx;
					{
					{
					_localctx = new VarDeclListContext(_parentctx, _parentState);
					pushNewRecursionContext(_localctx, _startState, RULE_varDeclList);
					setState(122);
					if (!(precpred(_ctx, 2))) throw new FailedPredicateException(this, "precpred(_ctx, 2)");
					setState(123);
					match(Comma);
					setState(124);
					varDeclInit();
					}
					} 
				}
				setState(129);
				_errHandler.sync(this);
				_alt = getInterpreter().adaptivePredict(_input,3,_ctx);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			unrollRecursionContexts(_parentctx);
		}
		return _localctx;
	}

	public static class VarDeclInitContext extends ParserRuleContext {
		public VarDeclIdContext varDeclId() {
			return getRuleContext(VarDeclIdContext.class,0);
		}
		public TerminalNode Colon() { return getToken(TParser.Colon, 0); }
		public SimpleExpContext simpleExp() {
			return getRuleContext(SimpleExpContext.class,0);
		}
		public VarDeclInitContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_varDeclInit; }
	}

	public final VarDeclInitContext varDeclInit() throws RecognitionException {
		VarDeclInitContext _localctx = new VarDeclInitContext(_ctx, getState());
		enterRule(_localctx, 12, RULE_varDeclInit);
		try {
			setState(135);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,4,_ctx) ) {
			case 1:
				enterOuterAlt(_localctx, 1);
				{
				setState(130);
				varDeclId();
				}
				break;
			case 2:
				enterOuterAlt(_localctx, 2);
				{
				setState(131);
				varDeclId();
				setState(132);
				match(Colon);
				setState(133);
				simpleExp(0);
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class VarDeclIdContext extends ParserRuleContext {
		public TerminalNode ID() { return getToken(TParser.ID, 0); }
		public TerminalNode OpenSqu() { return getToken(TParser.OpenSqu, 0); }
		public TerminalNode NUMCONST() { return getToken(TParser.NUMCONST, 0); }
		public TerminalNode CloseSqu() { return getToken(TParser.CloseSqu, 0); }
		public VarDeclIdContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_varDeclId; }
	}

	public final VarDeclIdContext varDeclId() throws RecognitionException {
		VarDeclIdContext _localctx = new VarDeclIdContext(_ctx, getState());
		enterRule(_localctx, 14, RULE_varDeclId);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(137);
			match(ID);
			setState(141);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,5,_ctx) ) {
			case 1:
				{
				setState(138);
				match(OpenSqu);
				setState(139);
				match(NUMCONST);
				setState(140);
				match(CloseSqu);
				}
				break;
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class TypeSpecContext extends ParserRuleContext {
		public TerminalNode Int() { return getToken(TParser.Int, 0); }
		public TerminalNode Bool() { return getToken(TParser.Bool, 0); }
		public TerminalNode Char() { return getToken(TParser.Char, 0); }
		public TypeSpecContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_typeSpec; }
	}

	public final TypeSpecContext typeSpec() throws RecognitionException {
		TypeSpecContext _localctx = new TypeSpecContext(_ctx, getState());
		enterRule(_localctx, 16, RULE_typeSpec);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(143);
			_la = _input.LA(1);
			if ( !((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << Int) | (1L << Bool) | (1L << Char))) != 0)) ) {
			_errHandler.recoverInline(this);
			}
			else {
				if ( _input.LA(1)==Token.EOF ) matchedEOF = true;
				_errHandler.reportMatch(this);
				consume();
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class FunDeclContext extends ParserRuleContext {
		public TypeSpecContext typeSpec() {
			return getRuleContext(TypeSpecContext.class,0);
		}
		public TerminalNode ID() { return getToken(TParser.ID, 0); }
		public TerminalNode OpenPar() { return getToken(TParser.OpenPar, 0); }
		public ParmsContext parms() {
			return getRuleContext(ParmsContext.class,0);
		}
		public TerminalNode ClosePar() { return getToken(TParser.ClosePar, 0); }
		public StmtContext stmt() {
			return getRuleContext(StmtContext.class,0);
		}
		public FunDeclContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_funDecl; }
	}

	public final FunDeclContext funDecl() throws RecognitionException {
		FunDeclContext _localctx = new FunDeclContext(_ctx, getState());
		enterRule(_localctx, 18, RULE_funDecl);
		try {
			setState(158);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case Int:
			case Bool:
			case Char:
				enterOuterAlt(_localctx, 1);
				{
				setState(145);
				typeSpec();
				setState(146);
				match(ID);
				setState(147);
				match(OpenPar);
				setState(148);
				parms();
				setState(149);
				match(ClosePar);
				setState(150);
				stmt();
				}
				break;
			case ID:
				enterOuterAlt(_localctx, 2);
				{
				setState(152);
				match(ID);
				setState(153);
				match(OpenPar);
				setState(154);
				parms();
				setState(155);
				match(ClosePar);
				setState(156);
				stmt();
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ParmsContext extends ParserRuleContext {
		public ParmListContext parmList() {
			return getRuleContext(ParmListContext.class,0);
		}
		public ParmsContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_parms; }
	}

	public final ParmsContext parms() throws RecognitionException {
		ParmsContext _localctx = new ParmsContext(_ctx, getState());
		enterRule(_localctx, 20, RULE_parms);
		try {
			setState(162);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case Int:
			case Bool:
			case Char:
				enterOuterAlt(_localctx, 1);
				{
				setState(160);
				parmList(0);
				}
				break;
			case ClosePar:
				enterOuterAlt(_localctx, 2);
				{
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ParmListContext extends ParserRuleContext {
		public ParmTypeListContext parmTypeList() {
			return getRuleContext(ParmTypeListContext.class,0);
		}
		public ParmListContext parmList() {
			return getRuleContext(ParmListContext.class,0);
		}
		public TerminalNode SemiColon() { return getToken(TParser.SemiColon, 0); }
		public ParmListContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_parmList; }
	}

	public final ParmListContext parmList() throws RecognitionException {
		return parmList(0);
	}

	private ParmListContext parmList(int _p) throws RecognitionException {
		ParserRuleContext _parentctx = _ctx;
		int _parentState = getState();
		ParmListContext _localctx = new ParmListContext(_ctx, _parentState);
		ParmListContext _prevctx = _localctx;
		int _startState = 22;
		enterRecursionRule(_localctx, 22, RULE_parmList, _p);
		try {
			int _alt;
			enterOuterAlt(_localctx, 1);
			{
			{
			setState(165);
			parmTypeList();
			}
			_ctx.stop = _input.LT(-1);
			setState(172);
			_errHandler.sync(this);
			_alt = getInterpreter().adaptivePredict(_input,8,_ctx);
			while ( _alt!=2 && _alt!=org.antlr.v4.runtime.atn.ATN.INVALID_ALT_NUMBER ) {
				if ( _alt==1 ) {
					if ( _parseListeners!=null ) triggerExitRuleEvent();
					_prevctx = _localctx;
					{
					{
					_localctx = new ParmListContext(_parentctx, _parentState);
					pushNewRecursionContext(_localctx, _startState, RULE_parmList);
					setState(167);
					if (!(precpred(_ctx, 2))) throw new FailedPredicateException(this, "precpred(_ctx, 2)");
					setState(168);
					match(SemiColon);
					setState(169);
					parmTypeList();
					}
					} 
				}
				setState(174);
				_errHandler.sync(this);
				_alt = getInterpreter().adaptivePredict(_input,8,_ctx);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			unrollRecursionContexts(_parentctx);
		}
		return _localctx;
	}

	public static class ParmTypeListContext extends ParserRuleContext {
		public TypeSpecContext typeSpec() {
			return getRuleContext(TypeSpecContext.class,0);
		}
		public ParmIdListContext parmIdList() {
			return getRuleContext(ParmIdListContext.class,0);
		}
		public ParmTypeListContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_parmTypeList; }
	}

	public final ParmTypeListContext parmTypeList() throws RecognitionException {
		ParmTypeListContext _localctx = new ParmTypeListContext(_ctx, getState());
		enterRule(_localctx, 24, RULE_parmTypeList);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(175);
			typeSpec();
			setState(176);
			parmIdList(0);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ParmIdListContext extends ParserRuleContext {
		public ParmIdContext parmId() {
			return getRuleContext(ParmIdContext.class,0);
		}
		public ParmIdListContext parmIdList() {
			return getRuleContext(ParmIdListContext.class,0);
		}
		public TerminalNode Comma() { return getToken(TParser.Comma, 0); }
		public ParmIdListContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_parmIdList; }
	}

	public final ParmIdListContext parmIdList() throws RecognitionException {
		return parmIdList(0);
	}

	private ParmIdListContext parmIdList(int _p) throws RecognitionException {
		ParserRuleContext _parentctx = _ctx;
		int _parentState = getState();
		ParmIdListContext _localctx = new ParmIdListContext(_ctx, _parentState);
		ParmIdListContext _prevctx = _localctx;
		int _startState = 26;
		enterRecursionRule(_localctx, 26, RULE_parmIdList, _p);
		try {
			int _alt;
			enterOuterAlt(_localctx, 1);
			{
			{
			setState(179);
			parmId();
			}
			_ctx.stop = _input.LT(-1);
			setState(186);
			_errHandler.sync(this);
			_alt = getInterpreter().adaptivePredict(_input,9,_ctx);
			while ( _alt!=2 && _alt!=org.antlr.v4.runtime.atn.ATN.INVALID_ALT_NUMBER ) {
				if ( _alt==1 ) {
					if ( _parseListeners!=null ) triggerExitRuleEvent();
					_prevctx = _localctx;
					{
					{
					_localctx = new ParmIdListContext(_parentctx, _parentState);
					pushNewRecursionContext(_localctx, _startState, RULE_parmIdList);
					setState(181);
					if (!(precpred(_ctx, 2))) throw new FailedPredicateException(this, "precpred(_ctx, 2)");
					setState(182);
					match(Comma);
					setState(183);
					parmId();
					}
					} 
				}
				setState(188);
				_errHandler.sync(this);
				_alt = getInterpreter().adaptivePredict(_input,9,_ctx);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			unrollRecursionContexts(_parentctx);
		}
		return _localctx;
	}

	public static class ParmIdContext extends ParserRuleContext {
		public TerminalNode ID() { return getToken(TParser.ID, 0); }
		public TerminalNode OpenSqu() { return getToken(TParser.OpenSqu, 0); }
		public TerminalNode CloseSqu() { return getToken(TParser.CloseSqu, 0); }
		public ParmIdContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_parmId; }
	}

	public final ParmIdContext parmId() throws RecognitionException {
		ParmIdContext _localctx = new ParmIdContext(_ctx, getState());
		enterRule(_localctx, 28, RULE_parmId);
		try {
			setState(193);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,10,_ctx) ) {
			case 1:
				enterOuterAlt(_localctx, 1);
				{
				setState(189);
				match(ID);
				}
				break;
			case 2:
				enterOuterAlt(_localctx, 2);
				{
				setState(190);
				match(ID);
				setState(191);
				match(OpenSqu);
				setState(192);
				match(CloseSqu);
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class StmtContext extends ParserRuleContext {
		public ExpStmtContext expStmt() {
			return getRuleContext(ExpStmtContext.class,0);
		}
		public CompoundStmtContext compoundStmt() {
			return getRuleContext(CompoundStmtContext.class,0);
		}
		public SelectStmtContext selectStmt() {
			return getRuleContext(SelectStmtContext.class,0);
		}
		public IterStmtContext iterStmt() {
			return getRuleContext(IterStmtContext.class,0);
		}
		public ReturnStmtContext returnStmt() {
			return getRuleContext(ReturnStmtContext.class,0);
		}
		public BreakStmtContext breakStmt() {
			return getRuleContext(BreakStmtContext.class,0);
		}
		public StmtContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_stmt; }
	}

	public final StmtContext stmt() throws RecognitionException {
		StmtContext _localctx = new StmtContext(_ctx, getState());
		enterRule(_localctx, 30, RULE_stmt);
		try {
			setState(201);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case Not:
			case True:
			case False:
			case ID:
			case NUMCONST:
			case CHARCONST:
			case STRINGCONST:
			case SemiColon:
			case Minus:
			case Star:
			case OpenPar:
			case QuestionMark:
				enterOuterAlt(_localctx, 1);
				{
				setState(195);
				expStmt();
				}
				break;
			case OpenCurly:
				enterOuterAlt(_localctx, 2);
				{
				setState(196);
				compoundStmt();
				}
				break;
			case If:
				enterOuterAlt(_localctx, 3);
				{
				setState(197);
				selectStmt();
				}
				break;
			case For:
			case While:
				enterOuterAlt(_localctx, 4);
				{
				setState(198);
				iterStmt();
				}
				break;
			case Return:
				enterOuterAlt(_localctx, 5);
				{
				setState(199);
				returnStmt();
				}
				break;
			case Break:
				enterOuterAlt(_localctx, 6);
				{
				setState(200);
				breakStmt();
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}
